# flow-rust

./: .env.example  .gitignore  BROWSER_TESTING.md  CLAUDE.md  CONFIGURATION.md  Cargo.toml  package-lock.json  package.json  playwright.config.js  需求.md
browser_tests/: basic_workflow.spec.js
migrations/: 001_initial_schema.sql  002_import_initial_data.sql  003_import_full_test_data.sql
src/: db.rs  deepseek.rs  lib.rs  main.rs  models.rs  store.rs  validators.rs
src/business_rules/: death_recorder.rs  event_classifier.rs  germination_tracker.rs  mod.rs  quantity_calculator.rs
src/handlers/: container_sizes.rs  fertilizer_materials.rs  growth_logs.rs  mod.rs  non_seedling_records.rs  plant_archive.rs  statistics.rs  todo_reminders.rs  yield_records.rs
static/: admin.html  index.html  login.html
tests/: api_container_sizes.rs  api_fertilizer_materials.rs  api_growth_logs.rs  api_non_seedling_records.rs  api_plant_archive.rs  api_statistics.rs  api_todo_reminders.rs  api_yield_records.rs
tests/common/: mod.rs
