[package]
name = "flower-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "chrono", "runtime-tokio", "migrate"] }
dotenv = "0.15"
async-openai = "0.21"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[dev-dependencies]
tower = "0.5"
hyper = "1.3"
tower-http = { version = "0.5", features = ["cors", "fs"] }
